# neurocomp

./: .gitignore  .gitmodules  CMakeLists.txt  binvec.c  binvec.h  imgui.ini  main.c
src/: CMakeLists.txt  example_square.c  main.c  main.cpp
src/hdvec/: CMakeLists.txt  binvec.c  binvec.h
src/lib/: CMakeLists.txt
src/lib/blaslib/: CMakeLists.txt
src/lib/cimguilib/: CMakeLists.txt  usegui.c  usegui.h
src/lib/dialoglib/: CMakeLists.txt  usedialog.h
src/lib/glfwlib/: CMakeLists.txt  glad.h  glfw.h
src/lib/glfwsupport/: CMakeLists.txt  glad.h  glfwsupport.h  shader_load.c
src/lib/glsupport/: CMakeLists.txt  glad.c  glsupport.h  shader_load.c
src/lib/guilib/: CMakeLists.txt  timer.cpp  timer.hpp  usegui.cpp  usegui.h
src/lib/resources/: CMakeLists.txt  embed.cmake  shaders.h  triangle_shaders.h  vert_color.fs
src/linmath/: CMakeLists.txt
src/memory/: CMakeLists.txt  mem_bundles.c  membndl.c  membndl.h
src/neurocomp/: CMakeLists.txt
src/neurocomp/hdvec/: CMakeLists.txt  binvec.h
src/neurocomp/memory/: CMakeLists.txt
src/neurocomp/nodes/: CMakeLists.txt  connect.c  connect.h  neuroplot.cpp  node.c  node.h  node_predictive.c  nodeout.c  nodeout.h
src/nodes/: CMakeLists.txt  node.c  node.h  nodeout.h
src/resources/: CMakeLists.txt
src/resources/shaders/: CMakeLists.txt  shader_load.c  shadercode.h  shaders.h  triangle.vs
test/: CMakeLists.txt  tests.cpp
